--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2>Toque no botão para continuar 👇</h2>
 
 <!-- BOTÃO PRINCIPAL (SEM DUPLO START) -->
-<a href="https://t.me/KelysynPrive_bot?start=1"
+<a href="https://t.me/KelysynPrive_bot?start=start"
 style="display:inline-block;margin-top:25px;padding:16px 32px;background:#0088cc;color:#fff;text-decoration:none;border-radius:10px;font-size:18px;">
 ABRIR TELEGRAM 🚀
 </a>
@@ -20,7 +20,7 @@ Se não abrir, segure o botão e escolha “Abrir em nova aba”.
 </p>
 
 <!-- BOTÃO ALTERNATIVO (APP DIRETO) -->
-<a href="tg://resolve?domain=KelysynPrive_bot?start=1"
+<a href="tg://resolve?domain=KelysynPrive_bot?start=start"
 style="display:block;margin:20px auto;padding:12px 22px;width:240px;background:#1c1c1c;color:#fff;text-decoration:none;border-radius:8px;font-size:14px;">
 Modo alternativo (App Telegram)
 </a>
