--- a/index.html
+++ b/index.html
@@ -4,26 +4,44 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Continuar</title>
+
+<script>
+function abrirTelegram() {
+    // tentativa 1 - abrir app do Telegram
+    window.location.href = "tg://resolve?domain=KelysynPrive_bot";
+
+    // tentativa 2 - fallback para link https
+    setTimeout(function() {
+        window.location.href = "https://t.me/KelysynPrive_bot";
+    }, 1200);
+}
+</script>
+
 </head>
-<body style="background:#000;color:#fff;text-align:center;font-family:Arial;padding-top:60px;">
+<body style="background:#000;color:#fff;text-align:center;font-family:Arial;padding-top:50px;">
 
-<h2>Toque no botão para continuar 👇</h2>
+<h2>Conectando ao Telegram…</h2>
+<p style="font-size:14px;color:#aaa;">Se não abrir automaticamente, toque no botão 👇</p>
 
-<!-- BOTÃO PRINCIPAL (SEM DUPLO START) -->
-<a href="https://t.me/KelysynPrive_bot?start=start"
-style="display:inline-block;margin-top:25px;padding:16px 32px;background:#0088cc;color:#fff;text-decoration:none;border-radius:10px;font-size:18px;">
+<button onclick="abrirTelegram()" style="margin-top:20px;padding:14px 28px;background:#0088cc;color:#fff;border:none;border-radius:8px;font-size:16px;">
 ABRIR TELEGRAM 🚀
-</a>
+</button>
 
-<p style="margin-top:25px;font-size:13px;color:#aaa;">
-Se não abrir, segure o botão e escolha “Abrir em nova aba”.
+<p style="margin-top:25px;font-size:12px;color:#777;">
+Caso não funcione, use um dos modos abaixo:
 </p>
 
-<!-- BOTÃO ALTERNATIVO (APP DIRETO) -->
-<a href="tg://resolve?domain=KelysynPrive_bot?start=start"
-style="display:block;margin:20px auto;padding:12px 22px;width:240px;background:#1c1c1c;color:#fff;text-decoration:none;border-radius:8px;font-size:14px;">
-Modo alternativo (App Telegram)
+<a href="https://t.me/KelysynPrive_bot" style="display:block;margin:10px auto;padding:12px 20px;width:220px;background:#1c1c1c;color:#fff;text-decoration:none;border-radius:6px;font-size:14px;">
+Modo alternativo 1
 </a>
+
+<a href="tg://resolve?domain=KelysynPrive_bot" style="display:block;margin:10px auto;padding:12px 20px;width:220px;background:#1c1c1c;color:#fff;text-decoration:none;border-radius:6px;font-size:14px;">
+Modo alternativo 2
+</a>
+
+<script>
+abrirTelegram();
+</script>
 
 </body>
 </html>
